kubernetes/http/ressources/hello-world-svc-two.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spinapp-service
  name: spinapp-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-spinapp
  type: NodePort
