kubernetes/http/ressources/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.p.cloudacode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-spinapp
            port:
              number: 80
